--- a/.gitignore
+++ b/.gitignore
@@ -23,4 +23,25 @@ build/
 # Environment variables
 .env
 .env.local
-.env.*.local 
+.env.*.local
+
+# Firebase service account
+serviceAccountKey.json
+
+# IDE and editor files
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock 
