--- a/package.json
+++ b/package.json
@@ -4,9 +4,23 @@
   "description": "User setup script for Gully Inspection System",
   "main": "setup-users.js",
   "scripts": {
-    "setup": "node setup-users.js"
+    "setup": "node setup-users.js",
+    "start": "node server.js",
+    "verify": "node verify-setup.js",
+    "cleanup": "node cleanup-db.js"
   },
   "dependencies": {
-    "firebase-admin": "^11.10.1"
+    "firebase-admin": "^11.10.1",
+    "firebase": "^10.7.0",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "helmet": "^7.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
+  },
+  "engines": {
+    "node": ">=16.0.0"
   }
 } 
