--- a/package.json
+++ b/package.json
@@ -1,6 +1,26 @@
 {
+  "name": "gully-inspection-user-setup",
+  "version": "1.0.0",
+  "description": "User setup script for Gully Inspection System",
+  "main": "setup-users.js",
+  "scripts": {
+    "setup": "node setup-users.js",
+    "start": "node server.js",
+    "verify": "node verify-setup.js",
+    "cleanup": "node cleanup-db.js"
+  },
   "dependencies": {
-    "dotenv": "^16.5.0",
-    "firebase-admin": "^13.4.0"
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "firebase": "^10.7.0",
+    "firebase-admin": "^11.11.1",
+    "helmet": "^7.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
+  },
+  "engines": {
+    "node": ">=16.0.0"
   }
 }
