--- a/package.json
+++ b/package.json
@@ -7,15 +7,17 @@
     "setup": "node setup-users.js",
     "start": "node server.js",
     "verify": "node verify-setup.js",
-    "cleanup": "node cleanup-db.js"
+    "cleanup": "node cleanup-db.js",
+    "test-email": "node email-service.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "firebase": "^10.7.0",
-    "firebase-admin": "^11.11.1",
-    "helmet": "^7.1.0"
+    "firebase-admin": "^13.5.0",
+    "helmet": "^7.1.0",
+    "nodemailer": "^6.10.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
